@startuml database

title "Ctrl+Eat Banco de dados"

' avoid problems with angled crows feet
skinparam linetype ortho


entity "Client" as client {
    *Id: Guid <<PK>>
    ---
    FirstName: String <<nullable>>
    LastName: String <<nullable>>
    Email: String <<nullable>>
    Password: String <<nullable>>
    DocumentId: String <<nullable>>
    DocumentType: Integer <<nullable>>
    IsAnonymous: Boolean
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Product Category" as productCategory {
    *Id: Guid <<PK>>
    ---
    Description: String
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Product" as product {
    *Id: Guid <<PK>>
    ---
    CategoryId: Guid <<FK>>
    Description: String
    Amount: Decimal
    Currency: String
    ImageUrl: String
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Stock" as stock {
    *Id: Guid <<PK>>
    ---
    ProductId: Guid <<FK>>
    Quantity: Integer
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Order Item" as orderItem {
    *Id: Guid <<PK>>
    ---
    OrderId: Guid <<FK>>
    ProductId: Guid <<FK>>
    Quantity: Integer
    Observation: String
    Description: String
    Amount: Decimal
    Currency: String
    ImageUrl: String
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Payment" as payment {
    *Id: Guid <<PK>>
    ---
    OrderId: Guid <<FK>>
    Status: Integer
    Amount: Decimal
    Currency: String
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

entity "Order" as order {
    *Id: Guid <<PK>>
    ---
    ClientId: Guid <<FK>>
    TrackId: String
    Status: Integer
    StatusUpdatedAtUtc: DateTime
    ---
    CreatedAtUtc: DateTime
    UpdatedAtUtc: DateTime
}

note right of client
    **DocumentType**

    1 = CPF
end note

note right of payment
    **Status**

    1 = Aguardando Pagamento
    2 = Aprovado
    3 = Rejeitado
end note

note right of order
    **Status**

    1 = Criado
    2 = Recebido
    3 = Em Preparação
    4 = Pronto
    5 = Finalizado
    6 = Cancelado
end note

' a product has Exactly One category
' a category has One or More products
product ||--|{ productCategory

' a product has Exactly One stock
' a stock has One or More products
product ||--|{ stock

' a payment has Exactly One order
' a order has Exactly One payment
payment ||--|| order

' a order has Exactly One client
' a client has One or More order
order ||--|{ client

' a product has Exactly One orderItem
' a orderItem has One or More products
product ||--|| orderItem

' a order has One or Mode orderItem
' a orderItem has Exactly One order
order }|--|| orderItem

@enduml